# intra-state-dynamics-rnn

./: .gitignore  .pre-commit-config.yaml  README.md  bootstrap.py  environment.yml  output.dvc  pyproject.toml  run.py
.dvc/: config
.github/workflows/: pre-commit.yml
src/core/config/: params_io.py  pipeline_params.invalid_20250821_123234.json  pipeline_params.json  preprocess.py  roots.json  roots_io.py
src/core/io/: import_paths.py  standard_paths.py  test_output.py
src/core/old/legacy/: __init__.py
src/core/pre_processing/: FRPipeline.py  README.md  RNNLatentprocessing.py  orchestrate_convolved_fr.py  orchestrate_h5_input.py  orchestrate_pred_fr.py  orchestrate_rnn_latents.py
src/core/scripts/: orchestrate.py
src/core/utils/: cp_io.py  extract_npz.py  find_extract_info.py  load_std_changepoints_from_pkl.py  read_parquets.py  spike_train_to_npz.py  unpkl_generator.py
tests/: README.md  check_package_integrity.py  describe_tree.py  ensure_init_files.py  export_or_diff_env.py  precommit_tests_run.py
